--- a/eShopLegacyWebFormsSolution/src/eShopLegacyBlazor/eShopLegacyBlazor.csproj
+++ b/eShopLegacyWebFormsSolution/src/eShopLegacyBlazor/eShopLegacyBlazor.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.3" />
+    <PackageReference Include="log4net" Version="2.0.8" />
+  </ItemGroup>
 
 </Project>
